<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/phonenumber_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:inputType="text"
        android:text="@string/input_phonenumber"
        android:textColor="#cccccc" />

    <EditText
        android:id="@+id/password1_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:inputType="text"
        android:text="@string/input_password1"
        android:textColor="#cccccc" />

    <EditText
        android:id="@+id/password2_register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:inputType="text"
        android:text="@string/input_password2"
        android:textColor="#cccccc" />

    <Button
        android:id="@+id/register_register"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_corner"
        android:text="@string/register"
        android:textSize="14sp" />
</LinearLayout>