<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_sport"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <!--主界面-运动-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@color/colorGray"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_walk_sport"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="35dp"
            android:layout_weight="1"
            android:background="@drawable/border_bottom"
            android:gravity="center"
            android:text="@string/walk"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/item_run_sport"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="35dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/run"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/item_ride_sport"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="35dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ride"
            android:textSize="18sp" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_sport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>